Fixed alignment of roles in volunteer pref page

--- a/app/assets/stylesheets/accounts/profiles.css.scss
+++ b/app/assets/stylesheets/accounts/profiles.css.scss
@@ -11,7 +11,8 @@
 #edit_volunteer_profile {
   .checkbox {
     display: inline-block;
-    width: 140px;
+    vertical-align: top;
+    width: 210px;
   }
 }
 
